fix: attend to design layout issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -704,10 +704,6 @@ video {
 	margin-top: auto;
 	margin-bottom: auto;
 }
-.mx-16 {
-	margin-left: 4rem;
-	margin-right: 4rem;
-}
 .ml-1 {
 	margin-left: 0.25rem;
 }
@@ -795,8 +791,8 @@ video {
 .h-72 {
 	height: 18rem;
 }
-.h-96 {
-	height: 24rem;
+.h-auto {
+	height: auto;
 }
 .h-screen {
 	height: 100vh;
@@ -824,9 +820,6 @@ video {
 }
 .h-1 {
 	height: 0.25rem;
-}
-.h-auto {
-	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -867,9 +860,6 @@ video {
 .w-2 {
 	width: 0.5rem;
 }
-.w-3\/6 {
-	width: 50%;
-}
 .max-w-6xl {
 	max-width: 72rem;
 }
@@ -881,9 +871,6 @@ video {
 }
 .flex-1 {
 	flex: 1 1 0%;
-}
-.flex-initial {
-	flex: 0 1 auto;
 }
 .transform {
 	--tw-translate-x: 0;
@@ -921,36 +908,24 @@ video {
 	margin-right: calc(1.25rem * var(--tw-space-x-reverse));
 	margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-x-12 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-x-reverse: 0;
-	margin-right: calc(3rem * var(--tw-space-x-reverse));
-	margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-8 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-	--tw-space-y-reverse: 0;
-	margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-	margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
 .space-y-12 > :not([hidden]) ~ :not([hidden]) {
 	--tw-space-y-reverse: 0;
 	margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
 	margin-bottom: calc(3rem * var(--tw-space-y-reverse));
+}
+.space-x-12 > :not([hidden]) ~ :not([hidden]) {
+	--tw-space-x-reverse: 0;
+	margin-right: calc(3rem * var(--tw-space-x-reverse));
+	margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .self-end {
 	align-self: flex-end;
 }
 .overflow-hidden {
 	overflow: hidden;
+}
+.rounded-md {
+	border-radius: 0.375rem;
 }
 .rounded-xl {
 	border-radius: 0.75rem;
@@ -966,9 +941,6 @@ video {
 }
 .rounded-3xl {
 	border-radius: 1.5rem;
-}
-.rounded-md {
-	border-radius: 0.375rem;
 }
 .rounded-l-sm {
 	border-top-left-radius: 0.125rem;
@@ -1037,10 +1009,6 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 0, 0, var(--tw-bg-opacity));
 }
-.bg-gray-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
@@ -1048,14 +1016,14 @@ video {
 .p-6 {
 	padding: 1.5rem;
 }
+.p-16 {
+	padding: 4rem;
+}
 .p-1 {
 	padding: 0.25rem;
 }
 .p-2 {
 	padding: 0.5rem;
-}
-.p-16 {
-	padding: 4rem;
 }
 .py-4 {
 	padding-top: 1rem;
@@ -1077,13 +1045,17 @@ video {
 	padding-left: 6rem;
 	padding-right: 6rem;
 }
-.py-14 {
-	padding-top: 3.5rem;
-	padding-bottom: 3.5rem;
-}
 .py-10 {
 	padding-top: 2.5rem;
 	padding-bottom: 2.5rem;
+}
+.py-16 {
+	padding-top: 4rem;
+	padding-bottom: 4rem;
+}
+.px-16 {
+	padding-left: 4rem;
+	padding-right: 4rem;
 }
 .py-5 {
 	padding-top: 1.25rem;
@@ -1108,18 +1080,6 @@ video {
 .py-8 {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-}
-.py-16 {
-	padding-top: 4rem;
-	padding-bottom: 4rem;
-}
-.px-8 {
-	padding-left: 2rem;
-	padding-right: 2rem;
-}
-.px-16 {
-	padding-left: 4rem;
-	padding-right: 4rem;
 }
 .pt-8 {
 	padding-top: 2rem;
@@ -1164,25 +1124,21 @@ video {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
 }
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
 .text-7xl {
 	font-size: 4.5rem;
 	line-height: 1;
 }
-.text-base {
-	font-size: 1rem;
-	line-height: 1.5rem;
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
 }
 .font-semibold {
 	font-weight: 600;
@@ -1196,8 +1152,8 @@ video {
 .font-light {
 	font-weight: 300;
 }
-.font-normal {
-	font-weight: 400;
+.uppercase {
+	text-transform: uppercase;
 }
 .capitalize {
 	text-transform: capitalize;
@@ -1210,6 +1166,9 @@ video {
 }
 .leading-snug {
 	line-height: 1.375;
+}
+.tracking-wide {
+	letter-spacing: 0.025em;
 }
 .text-gray-200 {
 	--tw-text-opacity: 1;
@@ -1239,6 +1198,10 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(17, 24, 39, var(--tw-text-opacity));
 }
+.text-gray-50 {
+	--tw-text-opacity: 1;
+	color: rgba(249, 250, 251, var(--tw-text-opacity));
+}
 .text-blue-500 {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
@@ -1250,10 +1213,6 @@ video {
 .text-black {
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
-}
-.text-gray-50 {
-	--tw-text-opacity: 1;
-	color: rgba(249, 250, 251, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
